<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="#ffffff"
    tools:context=".Activity.login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="39.93dp"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="30dp"

        app:srcCompat="@drawable/icon" />

    <!-- Sign In -->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="66dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"

        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="135dp"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="131dp"
        android:layout_marginRight="131dp"
        app:srcCompat="@drawable/main" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="81dp"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:layout_marginRight="24dp"
        android:lineSpacingExtra="4sp"
        android:text="@string/signUp"
        android:textAppearance="@style/sign_in"
        android:translationY="-2.23sp" />

    <TextView
        android:id="@+id/hi_let_s_se"
        android:layout_width="94dp"
        android:layout_height="24dp"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="163dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="154dp"
        android:layout_marginRight="154dp"
        android:gravity="top"
        android:lineSpacingExtra="4sp"
        android:text="@string/spruce"
        android:textAppearance="@style/hi_let_s_se"
        android:textColor="#31333B"
        android:textSize="18sp"
        android:textStyle="bold"
        android:translationY="-2.23sp" />

    <TextView
        android:id="@+id/create_your"
        android:layout_width="203dp"
        android:layout_height="50dp"
        android:layout_below="@+id/hi_let_s_se"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="11sp"
        android:text="@string/market"
        android:textAppearance="@style/create_your"
        android:textColor="#31333B" />

    <TextView
        android:id="@+id/hi_let_s_se1"
        android:layout_width="327dp"
        android:layout_height="48dp"
        android:layout_below="@+id/create_your"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:gravity="center"
        android:lineSpacingExtra="4sp"
        android:text="@string/get_your_first"
        android:textAppearance="@style/hi_let_s_se"
        android:textColor="#31333B"
        android:textSize="18sp"
        android:translationY="-2.23sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mailLayout"
        android:layout_width="327dp"
        android:layout_height="56dp"
        android:layout_below="@+id/hi_let_s_se1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:background="#F7F8FC"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:background="#F7F8FC"
            android:fontFamily="sans-serif"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#7C7B8A" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Sign_in"
        android:layout_width="327dp"
        android:layout_height="56dp"
        android:layout_below="@+id/mailLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:background="#F7F8FC"
        android:enabled="false"
        android:hint="@string/signIn"
        android:textColorHint="#7C7B8A"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/sign_in_with"
        android:layout_width="96dp"
        android:layout_height="24dp"
        android:layout_below="@+id/Sign_in"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="157dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="158dp"
        android:layout_marginRight="158dp"
        android:layout_marginBottom="424dp"
        android:gravity="center"
        android:lineSpacingExtra="4sp"
        android:text="Sign In with"
        android:textAppearance="@style/hi_let_s_se"
        android:textColor="#31333B"
        android:textSize="18sp"
        android:textStyle="bold"
        android:translationY="-2.23sp" />

    <Button
        android:id="@+id/fb"
        android:layout_width="155dp"
        android:layout_height="56dp"
        android:layout_below="@+id/Sign_in"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="66dp"
        android:background="#F7F8FC"
        android:enabled="false"
        android:hint="@string/facebook"
        android:textColor="#7C7B8A"
        android:textColorHint="#7C7B8A"
        android:textSize="18sp" />

    <Button
        android:id="@+id/google"
        android:layout_width="155dp"
        android:layout_height="56dp"
        android:layout_below="@+id/Sign_in"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:layout_toEndOf="@+id/fb"
        android:layout_toRightOf="@+id/fb"
        android:background="#F7F8FC"
        android:enabled="false"
        android:hint="@string/google"
        android:textColor="#7C7B8A"
        android:textColorHint="#7C7B8A"
        android:textSize="18sp" />

    <Button
        android:id="@+id/apple"
        android:layout_width="327dp"
        android:layout_height="56dp"
        android:layout_below="@+id/Sign_in"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="138dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:background="#F7F8FC"
        android:enabled="false"
        android:hint="@string/apple_id"
        android:textColor="#7C7B8A"
        android:textColorHint="#7C7B8A"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/sign_in_with_phone"
        android:layout_width="200dp"
        android:layout_height="24dp"
        android:layout_below="@+id/apple"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:clickable="true"
        android:gravity="center"
        android:lineSpacingExtra="4sp"
        android:text="@string/sign_in_with_phone"
        android:textAppearance="@style/hi_let_s_se"
        android:textColor="#21A453"
        android:textSize="18sp"
        android:textStyle="bold"
        android:translationY="-2.23sp" />

    <TextView
        android:id="@+id/sign_in_later"
        android:layout_width="120dp"
        android:layout_height="22dp"
        android:layout_below="@+id/apple"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="146dp"
        android:layout_marginRight="146dp"
        android:gravity="center"
        android:lineSpacingExtra="4sp"
        android:text="@string/sign_in_later"
        android:textAppearance="@style/hi_let_s_se"
        android:textColor="#31333B"
        android:textSize="18sp"
        android:translationY="-2.23sp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="130dp"
        android:layout_height="4dp"
        android:layout_below="@+id/sign_in_later"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="138dp"
        android:layout_marginLeft="138dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="143dp"
        android:layout_marginRight="143dp"
        android:layout_marginBottom="49dp"
        android:src="@drawable/home" />

</RelativeLayout>